vpc.tf
resource "aws_vpc" "chef" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"
  enable_classiclink   = "false"
  tags = {
    Name = "chef"
  }
}

resource "aws_subnet" "chef-public-1" {
  vpc_id                  = aws_vpc.chef.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "${var.AWS_REGION}a"

  tags = {
    Name = "chef-public-1"
  }
}


resource "aws_subnet" "chef-public-2" {
  vpc_id                  = aws_vpc.chef.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "${var.AWS_REGION}b"

  tags = {
    Name = "chef-public-2"
  }
}

resource "aws_subnet" "chef-public-3" {
  vpc_id                  = aws_vpc.chef.id
  cidr_block              = "10.0.3.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = "${var.AWS_REGION}b"

  tags = {
    Name = "chef-public-3"
  }
}

# Internet GW
resource "aws_internet_gateway" "chef-inet-gw" {
  vpc_id = aws_vpc.chef.id

  tags = {
    Name = "chef-inet-gw"
  }
}

# route tables
resource "aws_route_table" "chef-inet-route" {
  vpc_id = aws_vpc.chef.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.chef-inet-gw.id
  }

  tags = {
    Name = "chef-inet-route-1"
  }
}

# route associations public
resource "aws_route_table_association" "chef-public-1-a" {
  subnet_id      = aws_subnet.chef-public-1.id
  route_table_id = aws_route_table.chef-inet-route.id
}

resource "aws_route_table_association" "chef-public-2-a" {
  subnet_id      = aws_subnet.chef-public-2.id
  route_table_id = aws_route_table.chef-inet-route.id
}

resource "aws_route_table_association" "chef-public-3-a" {
  subnet_id      = aws_subnet.chef-public-3.id
  route_table_id = aws_route_table.chef-inet-route.id
}
